base pipeline: add retrieval metrics

--- a/experiments/base_pipeline.ipynb
+++ b/experiments/base_pipeline.ipynb
@@ -18,7 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## data preparation"
+    "## Nodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### data preparation"
    ]
   },
   {
@@ -199,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RegExp"
+    "### RegExp"
    ]
   },
   {
@@ -335,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retrieval"
+    "### Retrieval"
    ]
   },
   {
@@ -399,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scoring"
+    "### Scoring"
    ]
   },
   {
@@ -410,6 +417,27 @@
     "- knn\n",
     "- linear\n",
     "- dnnc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from typing import Literal\n",
+    "\n",
+    "\n",
+    "# class ScorerOptimizer:\n",
+    "#     available_modules = {\n",
+    "#         'knn': KNNScorer,\n",
+    "#         'linear': LinearScorer,\n",
+    "#         'dnnc': DNNCScorer,\n",
+    "#     }\n",
+    "#     def __init__(self, module_type: Literal['knn', 'linear', 'dnnc'], **hyperparams):\n",
+    "#         self.module = self.available_modules[module_type](**hyperparams)\n",
+    "    \n",
+    "#     def fit()"
    ]
   },
   {
@@ -439,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### knn"
+    "#### knn"
    ]
   },
   {
@@ -523,7 +551,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### linear"
+    "#### linear"
    ]
   },
   {
@@ -677,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### DNNC"
+    "#### DNNC"
    ]
   },
   {
@@ -809,7 +837,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prediction"
+    "### Prediction"
    ]
   },
   {
@@ -832,6 +860,308 @@
     "\n",
     "    return None # i.e. out of scope"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def score(query_labels: list[int], candidates_labels: list[list[int]]):\n",
+    "#     \"\"\"\n",
+    "#     Arguments\n",
+    "#     ---\n",
+    "#     - `query_labels`: for each query, this list contains its class labels\n",
+    "#     - `candidates_labels`: for each query, these lists contain class labels of items ranked by a retrieval model (from most to least relevant)\n",
+    "#     - `k`: the number of top items to consider for each query\n",
+    "\n",
+    "#     Return\n",
+    "#     ---\n",
+    "#     retrieval metric, averaged over all queries\n",
+    "    \n",
+    "\n",
+    "#     TODO:\n",
+    "#     - implement multilabel case, where query_labels: list[list[int]], i.e. each query has multiple intents\n",
+    "#     \"\"\"\n",
+    "#     raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5833333333333333, 0.5833333333333333)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def average_precision(query_label: int, candidate_labels: list[int], k: int = None) -> float:\n",
+    "    num_relevant = 0\n",
+    "    sum_precision = 0.0\n",
+    "    for i, label in enumerate(candidate_labels[:k]):\n",
+    "        if label == query_label:\n",
+    "            num_relevant += 1\n",
+    "            sum_precision += num_relevant / (i + 1)\n",
+    "    return sum_precision / num_relevant if num_relevant > 0 else 0.0\n",
+    "\n",
+    "def retrieval_map(query_labels: list[int], candidates_labels: list[list[int]], k: int = None):\n",
+    "    ap_list = [average_precision(q, c, k) for q, c in zip(query_labels, candidates_labels)]\n",
+    "    return sum(ap_list) / len(ap_list)\n",
+    "\n",
+    "def retrieval_map_numpy(query_labels: list[int], candidates_labels: list[list[int]], k: int) -> float:\n",
+    "    query_labels = np.array(query_labels)\n",
+    "    candidates_labels = np.array(candidates_labels)\n",
+    "    candidates_labels = candidates_labels[:, :k]\n",
+    "    relevance_mask = (candidates_labels == query_labels[:, None])\n",
+    "    cumulative_relevant = np.cumsum(relevance_mask, axis=1)\n",
+    "    precision_at_k = cumulative_relevant * relevance_mask / np.arange(1, k + 1)\n",
+    "    sum_precision = np.sum(precision_at_k, axis=1)\n",
+    "    num_relevant = np.sum(relevance_mask, axis=1)\n",
+    "    average_precision = np.divide(sum_precision, num_relevant, out=np.zeros_like(sum_precision), where=num_relevant != 0)\n",
+    "    return np.mean(average_precision)\n",
+    "\n",
+    "y_true = 1\n",
+    "y_pred = [2,1,1]\n",
+    "retrieval_map([y_true], [y_pred], k=3), retrieval_map_numpy([y_true], [y_pred], k=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 1.0)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def retrieval_hit_rate(query_labels: list[int], candidates_labels: list[list[int]], k: int) -> float:\n",
+    "    num_queries = len(query_labels)\n",
+    "    hit_count = 0\n",
+    "\n",
+    "    for i in range(num_queries):\n",
+    "        query_label = query_labels[i]\n",
+    "        candidate_labels = candidates_labels[i][:k]\n",
+    "\n",
+    "        if query_label in candidate_labels:\n",
+    "            hit_count += 1\n",
+    "\n",
+    "    return hit_count / num_queries\n",
+    "\n",
+    "def retrieval_hit_rate_numpy(query_labels: list[int], candidates_labels: list[list[int]], k: int) -> float:\n",
+    "    query_labels = np.array(query_labels)\n",
+    "    candidates_labels = np.array(candidates_labels)\n",
+    "    truncated_candidates = candidates_labels[:, :k]\n",
+    "    hit_mask = np.isin(query_labels[:, None], truncated_candidates).any(axis=1)\n",
+    "    hit_rate = hit_mask.mean()\n",
+    "    return hit_rate\n",
+    "\n",
+    "query_labels = [1]\n",
+    "candidates_labels = [[1, 4, 5, 2]]\n",
+    "k = 2\n",
+    "\n",
+    "retrieval_hit_rate(query_labels, candidates_labels, k), retrieval_hit_rate_numpy(query_labels, candidates_labels, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6666666666666666, 0.6666666666666666)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def retrieval_precision(query_labels: list[int], candidates_labels: list[list[int]], k: int) -> float:\n",
+    "    total_precision = 0.0\n",
+    "    num_queries = len(query_labels)\n",
+    "\n",
+    "    for i in range(num_queries):\n",
+    "        query_label = query_labels[i]\n",
+    "        candidate_labels = candidates_labels[i][:k]\n",
+    "\n",
+    "        relevant_items = [label for label in candidate_labels if label == query_label]\n",
+    "        precision_at_k = len(relevant_items) / k\n",
+    "\n",
+    "        total_precision += precision_at_k\n",
+    "\n",
+    "    return total_precision / num_queries\n",
+    "\n",
+    "\n",
+    "def retrieval_precision_numpy(query_labels: list[int], candidates_labels: list[list[int]], k: int) -> float:\n",
+    "    \"\"\"\n",
+    "    Arguments\n",
+    "    ---\n",
+    "    - `query_labels`: for each query, this list contains its class labels\n",
+    "    - `candidates_labels`: for each query, these lists contain class labels of items ranked by a retrieval model (from most to least relevant)\n",
+    "    - `k`: the number of top items to consider for each query\n",
+    "\n",
+    "    Return\n",
+    "    ---\n",
+    "    retrieval metric, averaged over all queries\n",
+    "    \"\"\"\n",
+    "    query_labels = np.array(query_labels)\n",
+    "    candidates_labels = np.array(candidates_labels)\n",
+    "    top_k_candidates = candidates_labels[:, :k]\n",
+    "    matches = (top_k_candidates == query_labels[:, None]).astype(int)\n",
+    "    relevant_counts = np.sum(matches, axis=1)\n",
+    "    precision_at_k = relevant_counts / k\n",
+    "    return np.mean(precision_at_k)\n",
+    "\n",
+    "\n",
+    "query_labels = [1]\n",
+    "candidates_labels = [[1, 1, 3, 4, 5]]\n",
+    "k = 3\n",
+    "\n",
+    "retrieval_precision(query_labels, candidates_labels, k), retrieval_precision_numpy(query_labels, candidates_labels, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9197207891481876"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def dcg(relevance_scores, k):\n",
+    "    \"\"\"\n",
+    "    Calculate the Discounted Cumulative Gain (DCG) at position k.\n",
+    "\n",
+    "    Arguments\n",
+    "    ---\n",
+    "    - `relevance_scores`: numpy array of relevance scores for items\n",
+    "    - `k`: the number of top items to consider\n",
+    "\n",
+    "    Return\n",
+    "    ---\n",
+    "    DCG value at position k\n",
+    "    \"\"\"\n",
+    "    relevance_scores = relevance_scores[:k]\n",
+    "    discounts = np.log2(np.arange(2, k + 2))\n",
+    "    dcg = np.sum((2 ** relevance_scores - 1) / discounts)\n",
+    "    return dcg\n",
+    "\n",
+    "def idcg(relevance_scores, k):\n",
+    "    \"\"\"\n",
+    "    Calculate the Ideal Discounted Cumulative Gain (IDCG) at position k.\n",
+    "\n",
+    "    Arguments\n",
+    "    ---\n",
+    "    - `relevance_scores`: numpy array of relevance scores for items\n",
+    "    - `k`: the number of top items to consider\n",
+    "\n",
+    "    Return\n",
+    "    ---\n",
+    "    IDCG value at position k\n",
+    "    \"\"\"\n",
+    "    ideal_scores = np.sort(relevance_scores)[::-1]\n",
+    "    return dcg(ideal_scores, k)\n",
+    "\n",
+    "\n",
+    "def retrieval_ndcg(query_labels, candidates_labels, k):\n",
+    "    ndcg_scores = []\n",
+    "    relevance_scores = np.array(query_labels)[:, None] == np.array(candidates_labels)\n",
+    "\n",
+    "    for rel_scores in relevance_scores:\n",
+    "        cur_dcg = dcg(rel_scores, k)\n",
+    "        cur_idcg = idcg(rel_scores, k)\n",
+    "        ndcg_scores.append(0.0 if cur_idcg == 0 else cur_dcg / cur_idcg)\n",
+    "\n",
+    "    return sum(ndcg_scores) / len(ndcg_scores)\n",
+    "\n",
+    "query_labels = [1]\n",
+    "candidates_labels = [[1, 2, 1, 2, 5]]\n",
+    "k = 3\n",
+    "\n",
+    "retrieval_ndcg(query_labels, candidates_labels, k=k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import optuna\n",
+    "\n",
+    "def objective(trial):\n",
+    "    x = trial.suggest_float('x', -10, 10)\n",
+    "    return (x - 2) ** 2\n",
+    "\n",
+    "study = optuna.create_study()\n",
+    "study.optimize(objective, n_trials=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
