refactor data records

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ! mkdir ../data/records"
+    "# ! mkdir ../data/intent_records"
    ]
   },
   {
@@ -385,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json.dump(dream_records, open('../data/records/dream.json', 'w'), indent=4, ensure_ascii=False)"
+    "json.dump(dream_records, open('../data/intent_records/dream.json', 'w'), indent=4, ensure_ascii=False)"
    ]
   },
   {
@@ -593,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json.dump(dream_ru_records, open('../data/records/ru_dream.json', 'w'), indent=4, ensure_ascii=False)"
+    "json.dump(dream_ru_records, open('../data/intent_records/ru_dream.json', 'w'), indent=4, ensure_ascii=False)"
    ]
   },
   {
@@ -689,6 +689,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### intent records"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -770,7 +777,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json.dump(banking77_records, open('../data/records/banking77.json', 'w'), indent=4, ensure_ascii=False)"
+    "json.dump(banking77_records, open('../data/intent_records/banking77.json', 'w'), indent=4, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### utterance records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'intent_id': 0,\n",
+       " 'intent_name': 'activate_my_card',\n",
+       " 'sample_utterances': [\"Please help me with my card.  It won't activate.\",\n",
+       "  'I tired but an unable to activate my card.',\n",
+       "  'I want to start using my card.',\n",
+       "  'How do I verify my new card?',\n",
+       "  \"I tried activating my plug-in and it didn't piece of work\"],\n",
+       " 'regexp_for_sampling': [],\n",
+       " 'regexp_as_rules': []}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "banking77_records = json.load(open('../data/intent_records/banking77.json'))\n",
+    "ru_banking77_records = json.load(open('../data/intent_records/ru_banking77.json'))\n",
+    "banking77_records[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_utterance_records(intent_records):\n",
+    "    res = []\n",
+    "    for rec in intent_records:\n",
+    "        for utt in rec['sample_utterances']:\n",
+    "            res.append(dict(\n",
+    "                intent_id=rec['intent_id'],\n",
+    "                intent_name=rec['intent_name'],\n",
+    "                utterance=utt\n",
+    "            ))\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "banking77_utterance_records = get_utterance_records(banking77_records)\n",
+    "ru_banking77_utterance_records = get_utterance_records(ru_banking77_records)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json.dump(banking77_utterance_records, open('../data/utterance_records/banking77.json', 'w'), indent=4, ensure_ascii=False)\n",
+    "json.dump(ru_banking77_utterance_records, open('../data/utterance_records/ru_banking77.json', 'w'), indent=4, ensure_ascii=False)"
    ]
   },
   {
@@ -901,7 +985,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "json.dump(rubanking77_records, open('../data/records/ru_banking77.json', 'w'), indent=4, ensure_ascii=False)"
+    "json.dump(rubanking77_records, open('../data/intent_records/ru_banking77.json', 'w'), indent=4, ensure_ascii=False)"
    ]
   }
  ],
