base_pipeline: add Moodule and Node abstractions

--- a/experiments/base_pipeline.ipynb
+++ b/experiments/base_pipeline.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nodes"
+    "## Modules"
    ]
   },
   {
@@ -200,6 +200,59 @@
     "    client\n",
     ")\n",
     "collection.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from chromadb.utils.embedding_functions import SentenceTransformerEmbeddingFunction as EmbFunc\n",
+    "\n",
+    "\n",
+    "class DataHandler:\n",
+    "    def __init__(self, intent_records: os.PathLike, db_path: os.PathLike = '../data/chroma'):\n",
+    "        self.utterances_train, self.utterances_test, self.labels_train, self.labels_test = split_sample_utterances(intent_records)\n",
+    "\n",
+    "        self.client = PersistentClient(path=db_path)\n",
+    "    \n",
+    "    def create_collection(self, model_name: str, db_name: str = \"example_collection\"):\n",
+    "        collection = client.get_or_create_collection(\n",
+    "            name=db_name,\n",
+    "            embedding_function=EmbFunc(model_name=model_name, trust_remote_code=True),\n",
+    "            metadata={'n_classes': len(set(self.labels_train))}\n",
+    "        )\n",
+    "        collection.add(\n",
+    "            documents=self.utterances_train,\n",
+    "            ids=[str(i) for i in range(len(self.utterances_train))],\n",
+    "            metadatas=[{'intent_id': lab} for lab in self.labels_train]\n",
+    "        )\n",
+    "        self.collection = collection\n",
+    "        return collection\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable\n",
+    "\n",
+    "\n",
+    "class Module:\n",
+    "    def fit(self, data_handler: DataHandler):\n",
+    "        pass\n",
+    "\n",
+    "    def score(self, data_handler: DataHandler, metric_fn: Callable) -> float:\n",
+    "        pass\n",
+    "\n",
+    "    def fit_score(self, data_handler: DataHandler, metric_fn: Callable) -> float:\n",
+    "        self.fit(data_handler)\n",
+    "        return self.score(data_handler, metric_fn)"
    ]
   },
   {
@@ -403,6 +456,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable\n",
+    "\n",
+    "\n",
+    "class VectorDBModule(Module):\n",
+    "    def __init__(self, model_name: str, k: int):\n",
+    "        self.model_name = model_name\n",
+    "        self.k = k\n",
+    "\n",
+    "    def fit(self, data_handler: DataHandler):\n",
+    "        data_handler.create_collection(self.model_name)\n",
+    "\n",
+    "    def score(self, data_handler: DataHandler, metric_fn: Callable):\n",
+    "        query_res = data_handler.collection.query(\n",
+    "            query_texts=data_handler.utterances_test,\n",
+    "            n_results=self.k,\n",
+    "            include=[\"metadatas\", \"documents\"]  # one can add \"embeddings\", \"distances\"\n",
+    "        )\n",
+    "        labels_pred = [[cand['intent_id'] for cand in candidates] for candidates in query_res['metadatas']]\n",
+    "        return metric_fn(labels_test, labels_pred)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -449,15 +529,16 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "class AbstractScorer:\n",
-    "    def fit(self, collection: Collection):\n",
+    "class ScoringModule(Module):\n",
+    "    def score(self, data_handler: DataHandler, metric_fn: Callable):\n",
+    "        probas = self.predict(data_handler.utterances_test)\n",
+    "        return metric_fn(data_handler.labels_test, probas)\n",
+    "\n",
+    "    def predict(self, utterances: list[str]):\n",
     "        raise NotImplementedError()\n",
     "\n",
-    "    def predict_proba(self, utterance: str):\n",
-    "        raise NotImplementedError()\n",
-    "    \n",
-    "    def predict_topk(self, utterance, k=3):\n",
-    "        scores = self.predict_proba(utterance)\n",
+    "    def predict_topk(self, utterance: str, k=3):\n",
+    "        scores = self.predict(utterance)\n",
     "        top_indices = np.argpartition(scores, kth=-k)[-k:]\n",
     "        top_scores = scores[top_indices]\n",
     "        return top_indices[np.argsort(top_scores)][::-1]"
@@ -478,7 +559,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "class KNNScorer(AbstractScorer):\n",
+    "class KNNScorer(ScoringModule):\n",
     "    \"\"\"\n",
     "    TODO:\n",
     "    - add weighted knn?\n",
@@ -486,18 +567,28 @@
     "    def __init__(self, k):\n",
     "        self.k = k\n",
     "\n",
-    "    def fit(self, collection: Collection):\n",
-    "        self._collection = collection\n",
-    "        self._n_classes = collection.metadata['n_classes']\n",
+    "    def fit(self, data_handler: DataHandler):\n",
+    "        self._collection = data_handler.collection\n",
+    "        self._n_classes = data_handler.collection.metadata['n_classes']\n",
     "\n",
-    "    def predict_proba(self, utterance: str):\n",
-    "        query_res = retrieval(utterance, self._collection, self.k)\n",
-    "        labels = [dct['intent_id'] for dct in query_res['metadatas'][0]]\n",
+    "    def predict(self, utterances: list[str]):\n",
+    "        \"\"\"\n",
+    "        TODO: test this code\n",
+    "        \"\"\"\n",
+    "        query_res = self._collection.query(\n",
+    "            query_texts=utterances,\n",
+    "            n_results=self.k,\n",
+    "            include=[\"metadatas\", \"documents\"]  # one can add \"embeddings\", \"distances\"\n",
+    "        )\n",
+    "        labels_pred = [[cand['intent_id'] for cand in candidates] for candidates in query_res['metadatas']]\n",
+    "        y = np.array(labels_pred)\n",
+    "\n",
+    "        n_queries = len(utterances)\n",
+    "        n_classes = self._collection.metadata['n_classes']\n",
+    "        y += n_classes * np.arange(n_queries)[:, None]\n",
+    "        counts = np.bincount(y.ravel(), minlength=n_classes*n_queries).reshape(n_queries, n_classes)\n",
     "        \n",
-    "        counters = np.bincount(labels, minlength=self._n_classes)\n",
-    "        scores = counters / counters.sum()\n",
-    "\n",
-    "        return scores"
+    "        return counts / counts.sum(axis=1, keepdims=True)"
    ]
   },
   {
@@ -563,7 +654,7 @@
     "from sklearn.linear_model import LogisticRegressionCV\n",
     "\n",
     "\n",
-    "class LinearScorer(AbstractScorer):\n",
+    "class LinearScorer(ScoringModule):\n",
     "    \"\"\"\n",
     "    TODO:\n",
     "    - implement different modes (incremental learning with SGD and simple learning with LogisticRegression)\n",
@@ -572,19 +663,19 @@
     "    - ensure that embeddings of train set are not recalculated\n",
     "    \"\"\"\n",
     "\n",
-    "    def fit(self, collection: Collection):\n",
-    "        dataset = collection.get(include=['embeddings', 'metadatas'])\n",
+    "    def fit(self, data_handler: DataHandler):\n",
+    "        dataset = data_handler.collection.get(include=['embeddings', 'metadatas'])\n",
     "        features = dataset['embeddings']\n",
     "        labels = [dct['intent_id'] for dct in dataset['metadatas']]\n",
     "        clf = LogisticRegressionCV(cv=3, n_jobs=8, multi_class='multinomial')\n",
     "        clf.fit(features, labels)\n",
     "\n",
     "        self._clf = clf\n",
-    "        self._collection = collection\n",
+    "        self._emb_func = data_handler.collection._embedding_function\n",
     "    \n",
-    "    def predict_proba(self, utterance: str):\n",
-    "        features = self._collection._embedding_function([utterance])\n",
-    "        return self._clf.predict_proba(features)[0]"
+    "    def predict(self, utterances: list[str]):\n",
+    "        features = self._emb_func(utterances)\n",
+    "        return self._clf.predict_proba(features)"
    ]
   },
   {
@@ -741,29 +832,42 @@
     "from chromadb import Collection\n",
     "\n",
     "\n",
-    "class DNNCScorer(AbstractScorer):\n",
+    "class DNNCScorer(ScoringModule):\n",
     "    \"\"\"\n",
     "    TODO:\n",
     "    - think about other cross-encoder settings\n",
     "    - implement training of cross-encoder with sentence_encoders utils\n",
+    "    - control device of model\n",
+    "    - inspect batch size of model.predict?\n",
     "    \"\"\"\n",
     "    def __init__(self, model_name: str, k: int):\n",
     "        self.model = CrossEncoder(model_name, trust_remote_code=True)\n",
     "        self.k = k\n",
     "    \n",
-    "    def fit(self, collection: Collection):\n",
-    "        self._collection = collection\n",
+    "    def fit(self, data_handler: DataHandler):\n",
+    "        self._collection = data_handler.collection\n",
     "    \n",
-    "    def predict_proba(self, utterance: str):\n",
-    "        \"\"\"returns just a smooth indicator of the chosen class\"\"\"\n",
-    "        query_res = retrieval(utterance, self._collection, self.k)\n",
+    "    def predict(self, utterances: list[str]):\n",
+    "        \"\"\"\n",
+    "        returns just a smooth indicator of the chosen class\n",
+    "        \n",
+    "        TODO: test this code\n",
+    "        \"\"\"\n",
+    "        query_res = self._collection.query(\n",
+    "            query_texts=utterances,\n",
+    "            n_results=self.k,\n",
+    "            include=[\"metadatas\", \"documents\"]  # one can add \"embeddings\", \"distances\"\n",
+    "        )\n",
     "\n",
-    "        cross_encoder_scores = self.model.predict([[utterance, cand] for cand in query_res['documents'][0]])\n",
+    "        text_pairs = [[[query, cand] for cand in q_res] for query, q_res in zip(utterances, query_res['documents'])]\n",
+    "        flattened_text_pairs = list(it.chain.from_iterable(text_pairs))\n",
+    "        flattened_cross_encoder_scores = self.model.predict(flattened_text_pairs)\n",
+    "        cross_encoder_scores = [flattened_cross_encoder_scores[i:i+self.k] for i in range(0,len(flattened_cross_encoder_scores,self.k))]\n",
     "\n",
-    "        intent_labels = [dct['intent_id'] for dct in query_res['metadatas'][0]]\n",
-    "        res = np.zeros(self._collection.metadata['n_classes'])\n",
-    "        i_best = np.argmax(cross_encoder_scores)\n",
-    "        res[intent_labels[i_best]] = cross_encoder_scores[i_best]\n",
+    "        labels_pred = [[cand['intent_id'] for cand in candidates] for candidates in query_res['metadatas']]\n",
+    "        res = np.zeros((len(utterances), self._collection.metadata['n_classes']))\n",
+    "        i_best = np.argmax(cross_encoder_scores, axis=1)\n",
+    "        res[labels_pred[i_best]] = cross_encoder_scores[i_best]\n",
     "        \n",
     "        return res"
    ]
@@ -859,6 +963,34 @@
     "        return i_best\n",
     "\n",
     "    return None # i.e. out of scope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PredictionModule(Module):\n",
+    "    def __init__(self, single_thresh: bool):\n",
+    "        self.signle_thresh = single_thresh\n",
+    "\n",
+    "    def fit(self, data_handler: DataHandler):\n",
+    "        n_classes = data_handler.collection.metadata['n_classes']\n",
+    "        self.thresh = 0.5 if self.signle_thresh else np.ones(n_classes) / 2\n",
+    "        \n",
+    "        # TODO: optimization\n",
+    "\n",
+    "    def score(self, data_handler: DataHandler, metric_fn: Callable):\n",
+    "        predictions = self.predict(data_handler.scores)\n",
+    "        return metric_fn(data_handler.labels_test, predictions)\n",
+    "\n",
+    "    def predict(self, scores: list[list[float]]):\n",
+    "        pred_classes = np.argmax(scores, axis=1)\n",
+    "        thresh = self.thresh if self.signle_thresh else self.thresh[pred_classes]\n",
+    "        best_scores = scores[pred_classes]\n",
+    "        pred_classes[best_scores < thresh] = None\n",
+    "        return"
    ]
   },
   {
@@ -1127,6 +1259,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieval_mrr(query_labels: list[int], candidates_labels: list[list[int]]) -> float:\n",
+    "    mrr_sum = 0.0\n",
+    "    num_queries = len(query_labels)\n",
+    "\n",
+    "    for i in range(num_queries):\n",
+    "        query_label = query_labels[i]\n",
+    "        candidate_labels = candidates_labels[i]\n",
+    "\n",
+    "        for rank, label in enumerate(candidate_labels):\n",
+    "            if label == query_label:\n",
+    "                mrr_sum += 1.0 / (rank + 1)\n",
+    "                break\n",
+    "\n",
+    "    mrr = mrr_sum / num_queries\n",
+    "    return mrr"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1137,7 +1292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Retrieval"
+    "### Node Abstraction"
    ]
   },
   {
@@ -1146,14 +1301,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import optuna\n",
+    "class RetrievalNode:\n",
+    "    metrics_available = {\n",
+    "        'retrieval_map': retrieval_map,\n",
+    "        'retrieval_ndcg': retrieval_ndcg,\n",
+    "        'retrieval_hit_rate': retrieval_hit_rate,\n",
+    "        'retrieval_precision': retrieval_precision,\n",
+    "        'retrieval_mrr': retrieval_mrr\n",
+    "    }\n",
     "\n",
-    "def objective(trial):\n",
-    "    x = trial.suggest_float('x', -10, 10)\n",
-    "    return (x - 2) ** 2\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        embedding_model_names: list[str],\n",
+    "        k: int,\n",
+    "        metric: Literal['retrieval_map', 'retrieval_ndcg', 'retrieval_hit_rate', 'retrieval_precision', 'retrieval_mrr']\n",
+    "    ):\n",
+    "        self.embedding_model_names = embedding_model_names\n",
+    "        self.client = PersistentClient(path='../data/chroma')\n",
+    "        self.k = k\n",
+    "        self.metric_name = metric\n",
+    "        self.metric_fn = self.metrics_available[metric]\n",
     "\n",
-    "study = optuna.create_study()\n",
-    "study.optimize(objective, n_trials=100)"
+    "    def fit(self, dataset: list[dict]):\n",
+    "        \"\"\"\n",
+    "        `dataset`: intent records\n",
+    "\n",
+    "        TODO: add splits statistics to optimization results (train size, test size, how many instances of each class in each split)\n",
+    "        \"\"\"\n",
+    "        splits = split_sample_utterances(dataset)\n",
+    "        metric_scores = [self._score_embedder(emb_name, *splits) for emb_name in self.embedding_model_names]\n",
+    "        self.optimization_results = {\n",
+    "            'metric_name': self.metric_name,\n",
+    "            'i_best': np.argmax(metric_scores),\n",
+    "            'scores': [{'model': model, 'score': score} for model, score in zip(self.embedding_model_names, metric_scores)]\n",
+    "        }\n",
+    "\n",
+    "    def _score_embedder(self, embedder_name, utterances_train, utterances_test, labels_train, labels_test):\n",
+    "        collection = create_collection(\n",
+    "            utterances=utterances_train,\n",
+    "            labels=labels_train,\n",
+    "            client=self.client,\n",
+    "            embedder_name=embedder_name\n",
+    "        )\n",
+    "        query_res = retrieval(utterances_test, collection, self.k)\n",
+    "        labels_pred = [[cand['intent_id'] for cand in candidates] for candidates in query_res['metadatas']]\n",
+    "        return self.metric_fn(labels_test, labels_pred)"
    ]
   },
   {
@@ -1161,7 +1353,80 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node:\n",
+    "    metrics_available = {}\n",
+    "    modules_available = {}\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        modules_search_spaces: list[dict],\n",
+    "        metric: str\n",
+    "    ):\n",
+    "        \"\"\"\n",
+    "        `modules_search_spaces`: list of records, where each record is a mapping: hyperparam_name -> list of values (search space) with extra field \"module_type\" with values from [\"knn\", \"linear\", \"dnnc\"]\n",
+    "        \"\"\"\n",
+    "        self.modules_search_spaces = modules_search_spaces\n",
+    "        self.metric_name = metric\n",
+    "\n",
+    "    def fit(self, data_handler: DataHandler):\n",
+    "        metric_scores = []\n",
+    "        modules_configs = []\n",
+    "        for search_space in self.modules_search_spaces:\n",
+    "            module_type = search_space.pop('module_type')\n",
+    "            for module_config in it.product(*search_space.values()):\n",
+    "                modules_configs.append(module_config)\n",
+    "                module = self.modules_available[module_type](**module_config)\n",
+    "                metric = module.fit_score(data_handler, self.metrics_available[self.metric_name])\n",
+    "                metric_scores.append(metric)\n",
+    "\n",
+    "        self.optimization_results = {\n",
+    "            'metric_name': self.metric_name,\n",
+    "            'i_best': np.argmax(metric_scores),\n",
+    "            'scores': metric_scores,\n",
+    "            'configs': modules_configs\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ScorerNode(Node):\n",
+    "    metrics_available = {\n",
+    "        'neg_cross_entropy': None,\n",
+    "        'roc_auc_ovr': None,\n",
+    "        'roc_auc_ovo': None,\n",
+    "    }\n",
+    "\n",
+    "    modules_available = {\n",
+    "        'knn': KNNScorer,\n",
+    "        'linear': LinearScorer,\n",
+    "        'dnnc': DNNCScorer\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RetrievalNode(Node):\n",
+    "    metrics_available = {\n",
+    "        'retrieval_map': retrieval_map,\n",
+    "        'retrieval_ndcg': retrieval_ndcg,\n",
+    "        'retrieval_hit_rate': retrieval_hit_rate,\n",
+    "        'retrieval_precision': retrieval_precision,\n",
+    "        'retrieval_mrr': retrieval_mrr\n",
+    "    }\n",
+    "\n",
+    "    modules_available = {\n",
+    "        'vector_db': VectorDBModule\n",
+    "    }"
+   ]
   }
  ],
  "metadata": {
