test all datasets and minor bug fix

--- a/experiments/data_convertion.ipynb
+++ b/experiments/data_convertion.ipynb
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1736,7 @@
        "['alarm_query', 'alarm_query', 'alarm_query', 'alarm_query', 'alarm_query']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
        " 'is there an alarm for ten am']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1782,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1791,7 @@
        "64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1802,12 +1802,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def convert_hwu64(hwu_utterances, hwu_labels, shots_per_intent):\n",
-    "    intent_names = sorted(hwu_labels)\n",
+    "    intent_names = sorted(set(hwu_labels))\n",
     "    name_to_id = dict(zip(intent_names, range(len(intent_names))))\n",
     "\n",
     "    res = [{\n",
@@ -1830,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1839,10 +1839,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "json.dump(hwu64_records, open('../data/intent_records/hwu64.json', 'w'), indent=4, ensure_ascii=False)"
    ]
   },
